--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-js-boilerplate",
-  "version": "3.25.0",
+  "name": "next-practice",
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "npm run db:migrate && next build",
@@ -129,5 +129,5 @@
       "@semantic-release/github"
     ]
   },
-  "author": "Ixartz (https://github.com/ixartz)"
+  "author": "pollyjean based on Ixartz (https://github.com/ixartz)"
 }
